@@ -22,6 +22,10 @@
    - markus@cvs.openbsd.org 2003/08/31 12:14:22
      [progressmeter.c]
      do write to buf[-1]
+   - markus@cvs.openbsd.org 2003/08/31 13:29:05
+     [session.c]
+     call ssh_gssapi_storecreds conditionally from do_exec(); 
+     with sxw@inf.ed.ac.uk
 
 20030829
  - (bal) openbsd-compat/ clean up.  Considate headers, add in Id on our
@@ -937,4 +941,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2925 2003/09/02 12:53:32 djm Exp $
+$Id: ChangeLog,v 1.2926 2003/09/02 12:55:45 djm Exp $
